todo-backend/manifests/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 2351
      targetPort: 8000
  type: ClusterIP
