todo-backend/manifests/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
spec:
  rules:
  - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 2351      
          - path: /add_todo
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 2351
